Change Content on Navbar and Comment all custom css

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1,4 +1,4 @@
-@font-face {
+/* @font-face {
     font-family: 'Logo';
     src: url('../font/coolvetica rg.ttf');
 }
@@ -87,4 +87,4 @@ input.files:disabled {
 input[type='submit'], button.uk-button, a.uk-button {
     background-color: #472639;
     color: white;
-}
+} */
